--- a/package.json
+++ b/package.json
@@ -18,22 +18,22 @@
     "@angular/platform-browser": "^12.2.0",
     "@angular/platform-browser-dynamic": "^12.2.0",
     "@angular/router": "^12.2.0",
+    "@briebug/jest-schematic": "^3.1.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-builders/jest": "latest",
     "@angular-devkit/build-angular": "^12.2.0",
     "@angular/cli": "^12.2.0",
     "@angular/compiler-cli": "^12.2.0",
     "@types/jasmine": "~3.10.0",
+    "@types/jest": "latest",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
+    "jest": "latest",
     "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "^4.3.5"
   }
 }
