- Removed karma & jasmin - Added coverage command - Updated .gitignore

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "jest",
+    "cover": "jest --coverage --coverageDirectory='coverage'"
   },
   "private": true,
   "dependencies": {
@@ -28,12 +29,9 @@
     "@angular-devkit/build-angular": "^12.2.0",
     "@angular/cli": "^12.2.0",
     "@angular/compiler-cli": "^12.2.0",
-    "@types/jasmine": "~3.10.0",
     "@types/jest": "latest",
     "@types/node": "^12.11.1",
-    "jasmine-core": "~3.10.0",
     "jest": "latest",
-    "karma-coverage": "~2.0.3",
     "typescript": "^4.3.5"
   }
 }
